Fix missing border when sidebar open

--- a/packages/perspective-viewer-datagrid/src/less/regular_table.less
+++ b/packages/perspective-viewer-datagrid/src/less/regular_table.less
@@ -289,7 +289,7 @@ regular-table table {
 // _first_ frame as if its in the wrong state, as it detects sidepanel state
 // via HTML attribute checking.
 perspective-viewer:not([settings]),
-:host-context(:not([settings])) {
+:host-context(perspective-viewer:not([settings])) {
     regular-table #psp-column-edit-buttons:after {
         content: none;
     }
